--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
         <!-- head definitions go here -->
     </head>
     <body>
-        <!-- the content goes here -->
+       <h1>This is heading 1</h1>
     </body>
 </html>
