--- a/test.html
+++ b/test.html
@@ -4,7 +4,6 @@
         
     </head>
     <body>
-       <h1>This is heading 1</h1>
-        <h2>This is heading 2</h2>
+       <h1>Hacktoberfest<h1>
     </body>
 </html>
